delay the preferred size update

with a queue connection, it updates the preferred size at the loop after
removing an entry from the tray.
in this way, the proper updated size gets used
BUG:274352